# FFXII-Asset-Converter

./: .gitignore  AssimpConversion.cpp  AssimpConversion.h  CMakeLists.txt  CMakePresets.json  ConverterInterface.cpp  ConverterInterface.h  Enums.h  Enums.py  Enums.txt  FileIOUtils.cpp  FileIOUtils.h  FileObjectBlock.cpp  FileObjectBlock.h  FileStructs.cpp  FileStructs.h  LICENSE.txt  PhyreDAEPack.cpp  PhyreDAEPack.h  PhyreDAEUnpack.cpp  PhyreDAEUnpack.h  PhyreDDSPack.cpp  PhyreDDSPack.h  PhyreDDSUnpack.cpp  PhyreDDSUnpack.h  PhyreIOUtils.cpp  PhyreIOUtils.h  PhyreInterface.cpp  PhyreInterface.h  PhyreMetadata.cpp  PhyreMetadata.h  PhyreStructs.cpp  PhyreStructs.h  README.md  Scene.cpp  Scene.h  Texture2D.cpp  Texture2D.h  VBFArchive.cpp  VBFArchive.h
AssimpImportHook/: AssimpImportHook.cpp  code_lists.txt  importer_registry.txt
CMD/: CMakeLists.txt  Main.cpp
GUI/: Audio.cpp  Audio.h  CMakeLists.txt  ClipDataObject.cpp  ClipDataObject.h  ClipDragDrop.cpp  ClipDragDrop.h  ClipDropSource.cpp  ClipDropSource.h  ClipDropTarget.cpp  ClipDropTarget.h  GUI.cpp  GUI.h  GUIBrowser.cpp  GUIBrowser.h  GUIIcon.cpp  GUIIcon.h  GUILogs.cpp  GUILogs.h  GUIPathHistory.cpp  GUIPathHistory.h  Main.cpp  PhyreGUI.cpp  PhyreGUI.h  PhyreGUIBrowser.cpp  PhyreGUIBrowser.h  PhyreGUIIcon.cpp  PhyreGUIIcon.h  PhyreGUILogs.cpp  PhyreGUILogs.h  PhyreGUIPathHistory.cpp  PhyreGUIPathHistory.h  PhyreGUITexture.cpp  PhyreGUITexture.h  Pipe.cpp  Pipe.h  Process.cpp  Process.h  VBFClipHelper.cpp  VBFClipHelper.h  (+3 more)
GUI/Icons/: app_icon16_data.h  app_icon32_data.h  app_icon48_data.h  archive_icon_small_data.h  convert_all.py  copy_icon_data.h  dll_icon_small_data.h  down_icon_data.h  exe_icon_small_data.h  file_icon_data.h  file_icon_small_data.h  file_white.h  folder_icon_data.h  folder_icon_small_data.h  folder_white.h  generate_icon_header.bat  generate_icon_header.py  image_icon_small_data.h  left_icon_data.h  left_icon_tiny_data.h  model_icon_small_data.h  music_icon_small_data.h  pin_icon_small_data.h  play_file_icon_data.h  play_icon_data.h  play_muted_icon_data.h  play_unmuted_icon_data.h  right_icon_data.h  right_icon_tiny_data.h  save_icon_data.h  text_icon_small_data.h  up_icon_data.h  video_icon_small_data.h  visibility_icon_data.h
Viewer/: CMakeLists.txt  Camera.cpp  Camera.h  Drawable.cpp  Drawable.h  Main.cpp  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Viewer.cpp  Viewer.h
bundled_files/: README.txt
bundled_files/LICENSES/ArgPraser/: COPYING
bundled_files/LICENSES/GLFW/: LICENSE
