cmake_minimum_required (VERSION 3.8)

project (PhyreConverter)
set(CONVERTER_VERSION "1.3.2")

option(POPULATE_BIN "place binaries in /bin and zip binaries with bundled_files to /bin" ON)

include(FetchContent)
set(FETCHCONTENT_QUIET FALSE)

set(ROOT_PATH "${CMAKE_CURRENT_LIST_DIR}")
set(ADDITIONAL_INCLUDE_DIRECTORIES "${CMAKE_CURRENT_LIST_DIR}")
set(THIRD_PARTY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/3rdParty")
set(THIRD_PARTY_BINARY_DIR "${CMAKE_BINARY_DIR}/3rdParty")
list(PREPEND CMAKE_MODULE_PATH "${THIRD_PARTY_DIR}")

set(CMAKE_CXX_STANDARD 23)
add_compile_definitions(NOMINMAX)

file(READ "${CMAKE_CURRENT_LIST_DIR}/bundled_files/README.txt" README_CONTENTS)
string(REGEX REPLACE "version[ \t]*([0-9]+\\.)*[0-9]+" "version ${CONVERTER_VERSION}" NEW_README_CONTENTS "${README_CONTENTS}")
file(WRITE "${CMAKE_CURRENT_LIST_DIR}/bundled_files/README.txt" "${NEW_README_CONTENTS}")

include(Assimp)
include(DirectXTex)
LIST(APPEND ADDITIONAL_INCLUDE_DIRECTORIES "${THIRD_PARTY_DIR}/assimp/include")
LIST(APPEND ADDITIONAL_INCLUDE_DIRECTORIES "${THIRD_PARTY_BINARY_DIR}/assimp/contrib/zlib")
LIST(APPEND ADDITIONAL_INCLUDE_DIRECTORIES "${THIRD_PARTY_DIR}/assimp/code/AssetLib/AssimpImportHook")
LIST(APPEND ADDITIONAL_INCLUDE_DIRECTORIES "${directxtex_SOURCE_DIR}")

set(CONVERTER_SOURCES
	"${CMAKE_CURRENT_LIST_DIR}/PhyreDAEUnpack.h"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreDAEUnpack.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreDAEPack.h"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreDAEPack.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreDDSUnpack.h"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreDDSUnpack.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreDDSPack.h"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreDDSPack.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreIOUtils.h"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreIOUtils.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreStructs.h"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreStructs.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreInterface.h"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreInterface.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreMetadata.h"
	"${CMAKE_CURRENT_LIST_DIR}/PhyreMetadata.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/VBFArchive.h"
	"${CMAKE_CURRENT_LIST_DIR}/VBFArchive.cpp"
	"${THIRD_PARTY_DIR}/md5/md5.h"
	"${THIRD_PARTY_DIR}/md5/md5.cpp"
)

add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/CMD")
add_subdirectory("${CMAKE_CURRENT_LIST_DIR}/GUI")

